# sysload

./: License.txt  Readme.html  Readme.md  _0temp.c  cpuload.c  cpuload.h  gettemp.c  gettemp.h  gpuload.c  gpuload.h  main.c  meson.build  sysload.pro  vcgencmd.c  vcgencmd.h
other/: _0temp.c
